--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "ulwlu-blog",
+  "description": "ulwlu's blog",
+  "license": "MIT",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ulwlu/blog.git"
+  },
   "scripts": {
-    "dev": "sapper dev",
+    "lint": "eslint . --ext .ts,.svelte --fix",
+    "serve": "sapper dev",
     "build": "sapper build",
     "export": "sapper export",
-    "start": "serve __sapper__/export",
+    "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "highlight.js": "^10.1.2",
-    "marked": "^1.1.0",
+    "marked": "^1.2.7",
     "polka": "next",
-    "ramda": "^0.27.1",
-    "rss-generator": "^0.0.3",
-    "serve": "^11.3.1",
-    "sirv": "^0.4.0"
+    "sirv": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -27,27 +29,45 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
-    "@rollup/plugin-typescript": "^4.1.2",
-    "@types/node": "^14.0.5",
-    "@types/ramda": "^0.27.14",
-    "gray-matter": "^4.0.2",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@rollup/plugin-url": "^5.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/compression": "^1.7.0",
+    "@types/marked": "^1.2.1",
+    "@types/node": "^14.11.1",
+    "@types/polka": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "autoprefixer": "^10.1.0",
+    "cssnano": "^4.1.10",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-svelte3": "^3.0.0",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.0.0",
-    "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-glob": "^1.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "rollup-pluginutils": "^2.8.2",
-    "sapper": "^0.27.0",
-    "showdown": "^1.9.1",
-    "showdown-highlight": "^2.1.4",
-    "svelte": "^3.0.0",
-    "svelte-preprocess": "^3.7.4",
-    "typescript": "^4.0.2"
+    "postcss": "^8.2.2",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.0",
+    "postcss-nested": "^5.0.3",
+    "prettier": "^2.2.1",
+    "rollup": "^2.3.4",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3",
+    "svelte-check": "^1.0.46",
+    "svelte-preprocess": "^4.6.1",
+    "tailwindcss": "^2.0.2",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.3"
   }
 }
