--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,20 +1,11 @@
 {
-  "background_color": "#ffffff",
-  "theme_color": "#333333",
-  "name": "TODO",
-  "short_name": "TODO",
+  "name": "ulwlu's blog",
+  "short_name": "ulwlu",
   "display": "minimal-ui",
   "start_url": "/",
-  "icons": [
-    {
-      "src": "logo-192.png",
-      "sizes": "192x192",
+  "icons": [{
+      "src": "favicon.png",
+      "sizes": "132x132",
       "type": "image/png"
-    },
-    {
-      "src": "logo-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  }]
 }
