--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ dist
 
 # TernJS port file
 .tern-port
+
+.DS_Store
+/node_modules/
+/src/node_modules/
+yarn-error.log
+/__sapper__/
+
+.vercel
