--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog",
-  "short_name": "duo",
+  "name": "ulwlu's blog",
+  "short_name": "ulwlu",
   "display": "minimal-ui",
   "start_url": "/",
   "icons": [{
