--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ulwlu's blog",
-  "short_name": "ulwlu",
+  "name": "Plan 9 from Crupto-Space's log",
+  "short_name": "ParallelCoin log",
   "display": "minimal-ui",
   "start_url": "/",
   "icons": [{
